work with emulators in docker